agregando mas fotogramas

--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
         <h4 class="subtitulo">Once tecnologías para una</h4>
         <h1 class="titulo">CAFICULTURA SOSTENIBLE</h1>
     </div>
-    <div id="ft1textfondo">
+    <div id="ft1textfondo" style="background-color: #eeeeee;">
         <div class="row">
-            <div class="col" style="text-align: right;">
-                <img src="img/fot1/fot1_ESTATICO.png" height="493" width="526"/>
-                <img src="img/fot1/fot1_plantaCRECER.png" height="50px" id="plantacrecerft1"/>
+            <div class="col" style="text-align: right;" id="imagenft1">
+                <img src="img/fot1/fot1_ESTATICO.png" height="493" width="526" id="fondoft1"/>
+
+                <img src="img/fot1/fot1_plantaCRECER.png" height="40px" id="plantacrecerft1"/>
+                <img src="img/fot1/fot1_plantaCRECER.png" height="40px" id="plantacrecer2ft1"/>
             </div>
 
             <div class="col">
@@ -69,14 +71,180 @@
                 </div>
 
                 <div class="div">
-                    <img src="img/estampas/sello1A.png" height="130" width="157"/>
-                    <img src="img/estampas/sello2A.png" height="129" width="150"/>
-                    <img src="img/estampas/sello3A.png" height="132" width="157"/>
+                    <img src="img/estampas/sello3.png" height="121" width="139"/>
+                    <img src="img/estampas/sello2.png" height="121" width="139"/>
+                    <img src="img/estampas/sello1.png" height="121" width="139"/>
                 </div>
 
             </div>
         </div>
     </div>
+
+    <div id="ft1textfondo">
+        <div class="row">
+            <div class="col" style="text-align: right;" id="imagenft2">
+
+                <img src="img/fot2/fot2_ESTATICO.png" height="372" width="460"/>
+
+                <img src="img/fot2/fot2_plantaCRECER.png" height="55px" id="plantacrecer1ft2" />
+            </div>
+
+            <div class="col">
+                <div class="div" style="text-align: justify-all;">
+                    <p>
+                        Este aprendizaje se basa en la experiencia de Practical Action
+                        en 180 parcelas de pequeños productores no organizados en
+                        un entorno de ecosistemas frágiles de la selva alta de la región
+                        San Martín. Luego de la aplicación de estas prácticas, las y los
+                        productores vieron un aumento en sus ingresos mayor al 25%
+                        y percibieron un impacto positivo en su relación con el
+                        ecosistema local.
+                    </p>
+                    <p>
+                        ¿Qué podemos hacer si nos enfrentamos a una parcela cada
+                        vez menos productiva? ¿Cómo podemos encontrar un balance
+                        que beneficie también al medio ambiente?
+                    </p>
+
+                    <p>
+                        <h1>
+                        ¡CONOZCAMOS ESTAS
+                        ONCE PRÁCTICAS SOSTENIBLES!
+                        </h1>
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div id="ft1textfondo" style="background-color: #eeeeee;">
+        <div class="row">
+            <div class="col" style="text-align: right; height: 570px;" id="imagenft3">
+
+
+                <img src="img/fot3/fot3_ESTATICO.png" height="249" width="181" id="cuerpoFot3"/>
+
+                <img src="img/fot3/fot3_objeto1_ESTATICO.png" height="253" width="260" id="CarritoFot3" />
+
+                <img src="img/fot3/fot3_objeto2_ESTATICO.png" height="120" width="396" id="CostalesFot3"/>
+
+
+                <img src="img/fot3/fot3_mujer1_mano2atras.png" height="75" width="101" id="ManoUnoFot3"/>
+
+                <img src="img/fot3/fot3_mujer1_mano1.png" height="105" width="121" id="ManoDosFot3"/>
+
+            </div>
+
+
+            <div class="col">
+                <div class="div" style="text-align: justify-all;">
+                    <div class="div" style="text-align: right;">
+                        <img src="img/fot3/sello3A.png" height="132" width="157"/>
+                    </div>
+
+                    <p>
+                        <h1>
+                            RENOVACIÓN DE CAFETALES <br/>
+                            MEDIANTE SIEMBRAS NUEVAS
+                        </h1>
+                    </p>
+                    <p>
+                        Consiste en la reinstalación de plantaciones de café en áreas
+                        que anteriormente fueron cafetales, pero que dejaron de serlo
+                        debido a diversos factores, entre ellos, la baja productividad,
+                        el ataque de plagas y enfermedades, u otros.
+                    </p>
+
+                    <p>
+                    <h1>
+                        VENTAJAS
+                    </h1>
+
+                    <ul>
+                        <li>Incremento de productividad.</li>
+                        <li>Mejor diseño de la plantación e instalación de sombra</li>
+                        <li>temporal y definitiva</li>
+                        <li>Reducción de costos.</li>
+                        <li>Facilita las labores culturales y la incorporación de prácticas de conservación de suelos.</li>
+                        <li>Permite introducir variedades de alta calidad en taza y</li>
+                        <li>resistentes a plagas y enfermedades.</li>
+                    </ul>
+
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <!--
+                    FOTOGRAMA 4
+    -->
+    <div id="ft1textfondo" style="background-color: white;">
+        <div class="row">
+            <div class="col" style="text-align: right; height: 570px;" id="imagenft4">
+
+                <img src="img/fot4/fot4_ESTATICO.png" height="218" width="458" id="TallosFot4" />
+                <img src="img/fot4/fot4_planta1.png" height="214" width="147" id="Planta1Fot4" />
+                <img src="img/fot4/fot4_planta2.png" height="213" width="149" id="Planta2Fot4"/>
+
+
+                <img src="img/fot4/fot4_planta3.png" height="72" width="56" id="Planta3AFot4"/>
+                <img src="img/fot4/fot4_planta3.png" height="72" width="56" id="Planta3BFot4"/>
+
+
+                <img src="img/fot4/fot4_planta4.png" height="72" width="56" id="Planta4AFot4"/>
+            </div>
+
+            <div class="col">
+                <div class="div" style="text-align: justify-all;">
+                    <div class="div" style="text-align: right;">
+                        <img src="img/fot4/sello3A.png" height="132" width="157"/>
+                    </div>
+
+                    <p>
+                    <h1>
+                        COBERTURAS <br/>
+                        VIVAS SUPERFICIALES
+                    </h1>
+                    </p>
+                    <p>
+                        Las coberturas vivas superficiales son plantas que se asocian
+                        con cultivos con la finalidad de proteger los suelos de la
+                        erosión y recuperar su fertilidad. Funcionan como fuente
+                        proveedora de nutrientes y materia orgánica.
+                    </p>
+
+                    <p>
+                    <h1>
+                        VENTAJAS
+                    </h1>
+
+                    <ul>
+                        <li>Permite la recuperación productiva de los suelos degradados.</li>
+                        <li>Fijación de nitrógeno en el suelo.</li>
+                        <li>Incrementa la fertilidad del suelo y el contenido de materia orgánica.</li>
+                        <li>Mantiene la humedad del suelo en épocas de sequía.</li>
+                        <li>Mejora la textura del suelo.</li>
+                        <li>Reduce las pérdidas del suelo por causa de la erosión.</li>
+                        <li>Ayuda a controlar las malezas.</li>
+                    </ul>
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
 
 
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tempor tortor ac nulla rutrum volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae nisi in massa hendrerit fermentum. Nulla rhoncus tempor massa. Nullam semper, ipsum tempor molestie malesuada, odio felis malesuada mi, sed commodo urna mi in risus. Praesent commodo nec augue vitae posuere. Pellentesque et felis ut sapien maximus vestibulum sit amet eget turpis. Nam ac diam a arcu vestibulum ullamcorper. Sed consequat nulla eget ante condimentum laoreet. Quisque vel purus sed orci pretium varius. Nullam scelerisque justo eu ante vehicula varius. Ut scelerisque elit at leo tempor venenatis. Aliquam eget semper augue, nec venenatis massa. In viverra rutrum placerat.
@@ -95,6 +263,11 @@
 
 </main>
 
+<!--
+
+-->
 <script src="js/main.js"></script>
+
+
 </body>
 </html>
