--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img class="img-responsive" src="img/fot4/fot4_ESTATICO.png" id="TallosFot44" />
                 <img class="img-responsive" src="img/fot4/fot4_planta1.png" id="Planta1Fot44" />
                 <img class="img-responsive" src="img/fot4/fot4_planta2.png" id="Planta2Fot44" />
-                <img class="img-responsive" src="img/fot4/fot4_planta3.png" />
+                <img class="img-responsive" src="img/fot4/fot4_planta3.png" id="Planta3AFot44" />
                 <img class="img-responsive" src="img/fot4/fot4_planta3.png" />
                 <img class="img-responsive" src="img/fot4/fot4_planta4.png" />
             </div>
