--- a/index.html
+++ b/index.html
@@ -26,12 +26,17 @@
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-6	col-xl-6 position-relative"
                  style="background-color: orange;height: 540px;">
+                <canvas width="600" height="600" id="micanvas">
+
+                </canvas>
+                <!--
                 <img class="img-responsive" src="img/fot4/fot4_ESTATICO.png" id="TallosFot44" />
                 <img class="img-responsive" src="img/fot4/fot4_planta1.png" id="Planta1Fot44" />
                 <img class="img-responsive" src="img/fot4/fot4_planta2.png" id="Planta2Fot44" />
                 <img class="img-responsive" src="img/fot4/fot4_planta3.png" id="Planta3AFot44" />
                 <img class="img-responsive" src="img/fot4/fot4_planta3.png" />
                 <img class="img-responsive" src="img/fot4/fot4_planta4.png" />
+                -->
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6	col-xl-6" style="background-color: purple">
                 <div class="div" style="text-align: right;">
