--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-6	col-xl-6 position-relative"
                  style="background-color: orange;height: 540px;">
-                <canvas width="600" height="600" id="micanvas">
-
+                <canvas width="600px" height="600px" id="micanvas">
                 </canvas>
                 <!--
                 <img class="img-responsive" src="img/fot4/fot4_ESTATICO.png" id="TallosFot44" />
