--- a/index.html
+++ b/index.html
@@ -220,10 +220,69 @@
        </div>
        -->
 
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-6	col-xl-6" style="background-color: aqua">
+                <img src="img/fot4/sello3A.png" />
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-6	col-xl-6" style="background-color: olive">
+                <img src="img/fot4/sello3A.png" />
+            </div>
+        </div>
+        <div class="row">
+            <div id="contra" class="col-sm-12 col-md-6 col-lg-6	col-xl-6 position-relative"
+                 style="background-color: orange;height: 540px;">
+                <img src="img/fot4/fot4_ESTATICO.png" id="TallosFot4" />
+                <img src="img/fot4/fot4_planta1.png" id="Planta1Fot4" />
+                <!--
+                <img src="img/fot4/fot4_planta2.png" id="Planta2Fot4"/>
+
+                <img src="img/fot4/fot4_planta3.png" id="Planta3AFot4"/>
+                <img src="img/fot4/fot4_planta3.png" id="Planta3BFot4"/>
+
+                <img src="img/fot4/fot4_planta4.png" id="Planta4AFot4"/>
+                -->
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-6	col-xl-6" style="background-color: purple">
+                <div class="div" style="text-align: right;">
+                    <img src="img/fot4/sello3A.png" />
+                </div>
+                <p class="textoCudadrado">
+                            <span class="tituloCuadrado">
+                                COBERTURAS <br/>
+                                VIVAS SUPERFICIALES
+                            </span>
+                </p>
+                <p class="textoCudadrado">
+                    Las coberturas vivas superficiales son plantas que se asocian
+                    con cultivos con la finalidad de proteger los suelos de la
+                    erosión y recuperar su fertilidad. Funcionan como fuente
+                    proveedora de nutrientes y materia orgánica.
+                </p>
+                <p class="textoCudadrado">
+                        <span class="tituloCuadrado">
+                            VENTAJAS
+                        </span>
+                <ul class="textoCudadrado">
+                    <li>Permite la recuperación productiva de los suelos degradados.</li>
+                    <li>Fijación de nitrógeno en el suelo.</li>
+                    <li>Incrementa la fertilidad del suelo y el contenido de materia orgánica.</li>
+                    <li>Mantiene la humedad del suelo en épocas de sequía.</li>
+                    <li>Mejora la textura del suelo.</li>
+                    <li>Reduce las pérdidas del suelo por causa de la erosión.</li>
+                    <li>Ayuda a controlar las malezas.</li>
+                </ul>
+                </p>
+            </div>
+        </div>
+    </div>
+
+
     <!--
                     FOTOGRAMA 4
     -->
-
+<!--
             <div id="contenedor" style="background-color: white;">
                 <div class="cuadrado" style="background-color: #00FF7F;" id="imagenft4">
 
@@ -274,7 +333,7 @@
                 </div>
             </div>
 
-
+-->
 
 
 </main>
