--- a/index.html
+++ b/index.html
@@ -233,15 +233,15 @@
         <div class="row">
             <div id="contra" class="col-sm-12 col-md-6 col-lg-6	col-xl-6 position-relative"
                  style="background-color: orange;height: 540px;">
-                <img src="img/fot4/fot4_ESTATICO.png" id="TallosFot4" />
-                <img src="img/fot4/fot4_planta1.png" id="Planta1Fot4" />
+                <img src="img/fot4/fot4_ESTATICO.png" class="img-fluid" id="TallosFot4" />
+                <img src="img/fot4/fot4_planta1.png" class="img-fluid" id="Planta1Fot4" />
                 <!--
-                <img src="img/fot4/fot4_planta2.png" id="Planta2Fot4"/>
+                <img src="img/fot4/fot4_planta2.png" class="img-fluid" id="Planta2Fot4"/>
 
-                <img src="img/fot4/fot4_planta3.png" id="Planta3AFot4"/>
-                <img src="img/fot4/fot4_planta3.png" id="Planta3BFot4"/>
+                <img src="img/fot4/fot4_planta3.png" class="img-fluid" id="Planta3AFot4"/>
+                <img src="img/fot4/fot4_planta3.png" class="img-fluid" id="Planta3BFot4"/>
 
-                <img src="img/fot4/fot4_planta4.png" id="Planta4AFot4"/>
+                <img src="img/fot4/fot4_planta4.png" class="img-fluid" id="Planta4AFot4"/>
                 -->
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6	col-xl-6" style="background-color: purple">
