--- a/index.html
+++ b/index.html
@@ -221,13 +221,13 @@
        -->
 
 
-    <div class="container">
+    <div class="container" >
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-6	col-xl-6" style="background-color: aqua">
-                <img src="img/fot4/sello3A.png" />
+                <img class="img-fluid" src="img/fot4/sello3A.png" />
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6	col-xl-6" style="background-color: olive">
-                <img src="img/fot4/sello3A.png" />
+                <img class="img-fluid" src="img/fot4/fot4_ESTATICO.png" />
             </div>
         </div>
         <div class="row">
