--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         </div>
         <div class="row">
             <div id="contra" class="col-sm-12 col-md-6 col-lg-6	col-xl-6 position-relative"
-                 style="background-color: orange;height: 540px;">
+                 style="background-color: orange;">
                 <img src="img/fot4/fot4_ESTATICO.png" class="img-fluid" id="TallosFot4" />
                 <img src="img/fot4/fot4_planta1.png" class="img-fluid" id="Planta1Fot4" />
                 <!--
