--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
             </div>
         </div>
         <div class="row">
-            <div id="contra" class="col-sm-12 col-md-6 col-lg-6	col-xl-6 position-relative"
-                 style="background-color: orange;max-height: 540px;">
+            <div id="contra" style="background-color: orange;width:800px;height: 540px;">
+
                 <img src="img/fot4/fot4_ESTATICO.png" class="img-fluid" id="TallosFot4" />
                 <img src="img/fot4/fot4_planta1.png" class="img-fluid" id="Planta1Fot4" />
                 <!--
@@ -244,7 +244,7 @@
                 <img src="img/fot4/fot4_planta4.png" class="img-fluid" id="Planta4AFot4"/>
                 -->
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-6	col-xl-6" style="background-color: purple">
+            <div style="background-color: purple">
                 <div class="div" style="text-align: right;">
                     <img src="img/fot4/sello3A.png" />
                 </div>
