--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </div>
         </div>
         <div class="row">
-            <div id="contra" style="background-color: orange;width:800px;height: 540px;">
+            <div id="contra" style="background-color: orange;width:520px;height: 540px;">
 
                 <img src="img/fot4/fot4_ESTATICO.png" class="img-fluid" id="TallosFot4" />
                 <img src="img/fot4/fot4_planta1.png" class="img-fluid" id="Planta1Fot4" />
@@ -244,8 +244,8 @@
                 <img src="img/fot4/fot4_planta4.png" class="img-fluid" id="Planta4AFot4"/>
                 -->
             </div>
-            <div style="background-color: purple">
-                <div class="div" style="text-align: right;">
+            <div style="background-color: purple;width:520px;height: 540px;">
+                <div class="div" style="text-align: right">
                     <img src="img/fot4/sello3A.png" />
                 </div>
                 <p class="textoCudadrado">
