--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </div>
         </div>
         <div class="row">
-            <div id="contra" style="background-color: orange;width:520px;height: 540px;">
+            <div id="contra" style="width:520px;height: 540px;">
 
                 <img src="img/fot4/fot4_ESTATICO.png" class="img-fluid" id="TallosFot4" />
                 <img src="img/fot4/fot4_planta1.png" class="img-fluid" id="Planta1Fot4" />
