--- a/index.html
+++ b/index.html
@@ -227,48 +227,53 @@
 
 -->
 <div class="grid-container">
-    <div style="position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;display: inline-block;">
-        <img src="img/fot4/fot4_ESTATICO.png" id="TallosFot4" />
-        <img src="img/fot4/fot4_planta1.png" id="Planta1Fot4" />
+    <div class="grid-sub-container" style="background-color: purple;height: 550px">
+        <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;display: inline-block;">
+            <img src="img/fot4/fot4_ESTATICO.png" id="TallosFot4" />
+            <img src="img/fot4/fot4_planta1.png" id="Planta1Fot4" />
 
-        <img src="img/fot4/fot4_planta2.png" id="Planta2Fot4"/>
+            <img src="img/fot4/fot4_planta2.png" id="Planta2Fot4"/>
 
-        <img src="img/fot4/fot4_planta3.png" id="Planta3AFot4"/>
-        <img src="img/fot4/fot4_planta3.png" id="Planta3BFot4"/>
+            <img src="img/fot4/fot4_planta3.png" id="Planta3AFot4"/>
+            <img src="img/fot4/fot4_planta3.png" id="Planta3BFot4"/>
 
-        <img src="img/fot4/fot4_planta4.png" id="Planta4AFot4"/>
-    </div>
-    <div style="width:510px;height: 540px">
-        <div class="div" style="text-align: right">
-            <img src="img/fot4/sello3A.png" />
+            <img src="img/fot4/fot4_planta4.png" id="Planta4AFot4"/>
         </div>
-        <p class="textoCudadrado">
+        <div style="background-color: transparent;width:510px;height: 540px">
+            <div style="background-color: transparent;text-align: right">
+                <img src="img/fot4/sello3A.png" />
+            </div>
+            <p class="textoCudadrado">
                             <span class="tituloCuadrado">
                                 COBERTURAS <br/>
                                 VIVAS SUPERFICIALES
                             </span>
-        </p>
-        <p class="textoCudadrado">
-            Las coberturas vivas superficiales son plantas que se asocian
-            con cultivos con la finalidad de proteger los suelos de la
-            erosión y recuperar su fertilidad. Funcionan como fuente
-            proveedora de nutrientes y materia orgánica.
-        </p>
-        <p class="textoCudadrado">
+            </p>
+            <p class="textoCudadrado">
+                Las coberturas vivas superficiales son plantas que se asocian
+                con cultivos con la finalidad de proteger los suelos de la
+                erosión y recuperar su fertilidad. Funcionan como fuente
+                proveedora de nutrientes y materia orgánica.
+            </p>
+            <p class="textoCudadrado">
                         <span class="tituloCuadrado">
                             VENTAJAS
                         </span>
-        <ul class="textoCudadrado">
-            <li>Permite la recuperación productiva de los suelos degradados.</li>
-            <li>Fijación de nitrógeno en el suelo.</li>
-            <li>Incrementa la fertilidad del suelo y el contenido de materia orgánica.</li>
-            <li>Mantiene la humedad del suelo en épocas de sequía.</li>
-            <li>Mejora la textura del suelo.</li>
-            <li>Reduce las pérdidas del suelo por causa de la erosión.</li>
-            <li>Ayuda a controlar las malezas.</li>
-        </ul>
-        </p>
+            <ul class="textoCudadrado">
+                <li>Permite la recuperación productiva de los suelos degradados.</li>
+                <li>Fijación de nitrógeno en el suelo.</li>
+                <li>Incrementa la fertilidad del suelo y el contenido de materia orgánica.</li>
+                <li>Mantiene la humedad del suelo en épocas de sequía.</li>
+                <li>Mejora la textura del suelo.</li>
+                <li>Reduce las pérdidas del suelo por causa de la erosión.</li>
+                <li>Ayuda a controlar las malezas.</li>
+            </ul>
+            </p>
+        </div>
     </div>
+
+
+
 
     <div>3</div>
     <div>4</div>
