--- a/index.html
+++ b/index.html
@@ -227,16 +227,13 @@
 
 -->
 <div class="grid-container">
-    <div class="grid-sub-container" style="background-color: purple;height: 550px">
+    <div class="grid-sub-container" style="background-color: white;height: 550px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;display: inline-block;">
             <img src="img/fot4/fot4_ESTATICO.png" id="TallosFot4" />
             <img src="img/fot4/fot4_planta1.png" id="Planta1Fot4" />
-
             <img src="img/fot4/fot4_planta2.png" id="Planta2Fot4"/>
-
             <img src="img/fot4/fot4_planta3.png" id="Planta3AFot4"/>
             <img src="img/fot4/fot4_planta3.png" id="Planta3BFot4"/>
-
             <img src="img/fot4/fot4_planta4.png" id="Planta4AFot4"/>
         </div>
         <div style="background-color: transparent;width:510px;height: 540px">
@@ -271,12 +268,53 @@
             </p>
         </div>
     </div>
+    <div class="grid-sub-container" style="background-color:#eeeeee;height: 550px">
+        <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;display: inline-block;">
+            <img src="img/fot5/fot5_ESTATICO.png" class="img-puestas" style="top:17%;left: 10%;" />
+            <img src="img/fot5/fot5_arbol1.png" class="img-puestas" style="top:2.2%;left: 4.1%;" />
+            <img src="img/fot5/fot5_cafe.png" class="img-puestas" style="top:59%;left: 58.8%;" />
+            <img src="img/fot5/fot5_planta1.png" class="img-puestas" style="top:83%;left:46%" />
+            <img src="img/fot5/fot5_planta2.png" class="img-puestas" style="top:83%;left: 79.7%"/>
+        </div>
+        <div style="background-color: transparent;width:510px;height: 540px">
+            <div style="background-color: transparent;text-align: right">
+                <img src="img/fot5/sello1A.png" />
+            </div>
 
+            <p>
+                <span class="tituloCuadrado">
+                    INCORPORACIÓN DE ÁRBOLES </br>
+                    DE SOMBRA EN LOS CAFETALES
+                </span>
+            </p>
 
+            <p class="textoCudadrado">
+                Consiste en la instalación de árboles para dar sombra al café.
+                Para ello es necesario considerar las siguientes actividades:
 
+                <ul class="textoCudadrado">
+                <li>Identificación las especies forestales que mejor se asocien y su densidad ideal.</li>
+                <li>Producción de los plantones forestales en viveros centralizados.</li>
+                <li>Diseño, instalación y manejo de los árboles de sombra del café.</li>
+                </ul>
+            </p>
 
-    <div>3</div>
-    <div>4</div>
+            <p>
+                <span class="tituloCuadrado">
+                    VENTAJAS
+                </span>
+
+                <ul class="textoCudadrado">
+                    <li>Mejora de la calidad del café y a la reducción de plagas y enfermedades.</li>
+                    <li>Reducen el impacto de las sequías, heladas y control de erosión de los suelos.</li>
+                    <li>Propician la recuperación productiva de los suelos.</li>
+                    <li>Reducen la concentración de GEI en la atmósfera.</li>
+                    <li>Generan ingresos adicionales al cultivo de café por la venta de la madera.</li>
+                </ul>
+            </p>
+        </div>
+    </div>
+
 
     <div>5</div>
     <div>6</div>
