--- a/index.html
+++ b/index.html
@@ -10,225 +10,105 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-
-
 <main>
 
-    <!--
-       <div id="ft1fondo" align="center">
-           <img src="img/fot1/planta_intro.png" height="25px" id="plantafot1" />
-           <h4 class="subtitulo">Once tecnologías para una</h4>
-           <h1 class="titulo">CAFICULTURA SOSTENIBLE</h1>
-       </div>
-       <div id="ft1textfondo" style="background-color: #eeeeee;">
-           <div class="row">
-               <div class="col" style="text-align: right;" id="imagenft1">
-                   <img src="img/fot1/fot1_ESTATICO.png" height="493" width="526" id="fondoft1"/>
-
-                   <img src="img/fot1/fot1_plantaCRECER.png" height="40px" id="plantacrecerft1"/>
-                   <img src="img/fot1/fot1_plantaCRECER.png" height="40px" id="plantacrecer2ft1"/>
-               </div>
-
-               <div class="col">
-                   <div class="div" style="text-align: justify-all;">
-                       <p>
-                           A través de esta infografía, queremos compartir nuestra
-                           propuesta tecnológica con base en <b>once prácticas para una
-                           caficultura con enfoque climático y sostenible.</b>
-                       </p>
-                       <p>
-                           Con ellas, los agricultores y agricultoras con los que hemos
-                           trabajado han logrado obtener beneficios como la
-                           disminución del daño ocasionado por las plagas y
-                           enfermedades, el ahorro por efecto de la disminución de la
-                           compra de insumos externos y una mayor producción de café
-                           de calidad.
-                       </p>
-
-                       <p>
-                           Hemos organizado estas prácticas en tres categorías según
-                           sus beneficios
-                       </p>
-                   </div>
-
-                   <div class="div">
-                       <img src="img/estampas/sello3.png" height="121" width="139"/>
-                       <img src="img/estampas/sello2.png" height="121" width="139"/>
-                       <img src="img/estampas/sello1.png" height="121" width="139"/>
-                   </div>
-
-               </div>
-           </div>
-       </div>
-
-       <div id="ft1textfondo">
-           <div class="row">
-               <div class="col" style="text-align: right;" id="imagenft2">
-
-                   <img src="img/fot2/fot2_ESTATICO.png" height="372" width="460"/>
-
-                   <img src="img/fot2/fot2_plantaCRECER.png" height="55px" id="plantacrecer1ft2" />
-               </div>
-
-               <div class="col">
-                   <div class="div" style="text-align: justify-all;">
-                       <p>
-                           Este aprendizaje se basa en la experiencia de Practical Action
-                           en 180 parcelas de pequeños productores no organizados en
-                           un entorno de ecosistemas frágiles de la selva alta de la región
-                           San Martín. Luego de la aplicación de estas prácticas, las y los
-                           productores vieron un aumento en sus ingresos mayor al 25%
-                           y percibieron un impacto positivo en su relación con el
-                           ecosistema local.
-                       </p>
-                       <p>
-                           ¿Qué podemos hacer si nos enfrentamos a una parcela cada
-                           vez menos productiva? ¿Cómo podemos encontrar un balance
-                           que beneficie también al medio ambiente?
-                       </p>
-
-                       <p>
-                           <h1>
-                           ¡CONOZCAMOS ESTAS
-                           ONCE PRÁCTICAS SOSTENIBLES!
-                           </h1>
-                       </p>
-                   </div>
-
-               </div>
-           </div>
-       </div>
-
-       <div id="ft1textfondo" style="background-color: #eeeeee;">
-           <div class="row">
-               <div class="col" style="text-align: right; height: 570px;" id="imagenft3">
-
-
-                   <img src="img/fot3/fot3_ESTATICO.png" height="249" width="181" id="cuerpoFot3"/>
-
-                   <img src="img/fot3/fot3_objeto1_ESTATICO.png" height="253" width="260" id="CarritoFot3" />
-
-                   <img src="img/fot3/fot3_objeto2_ESTATICO.png" height="120" width="396" id="CostalesFot3"/>
-
-
-                   <img src="img/fot3/fot3_mujer1_mano2atras.png" height="75" width="101" id="ManoUnoFot3"/>
-
-                   <img src="img/fot3/fot3_mujer1_mano1.png" height="105" width="121" id="ManoDosFot3"/>
-
-               </div>
-
-
-               <div class="col">
-                   <div class="div" style="text-align: justify-all;">
-                       <div class="div" style="text-align: right;">
-                           <img src="img/fot3/sello3A.png" height="132" width="157"/>
-                       </div>
-
-                       <p>
-                           <h1>
-                               RENOVACIÓN DE CAFETALES <br/>
-                               MEDIANTE SIEMBRAS NUEVAS
-                           </h1>
-                       </p>
-                       <p>
-                           Consiste en la reinstalación de plantaciones de café en áreas
-                           que anteriormente fueron cafetales, pero que dejaron de serlo
-                           debido a diversos factores, entre ellos, la baja productividad,
-                           el ataque de plagas y enfermedades, u otros.
-                       </p>
-
-                       <p>
-                       <h1>
-                           VENTAJAS
-                       </h1>
-
-                       <ul>
-                           <li>Incremento de productividad.</li>
-                           <li>Mejor diseño de la plantación e instalación de sombra</li>
-                           <li>temporal y definitiva</li>
-                           <li>Reducción de costos.</li>
-                           <li>Facilita las labores culturales y la incorporación de prácticas de conservación de suelos.</li>
-                           <li>Permite introducir variedades de alta calidad en taza y</li>
-                           <li>resistentes a plagas y enfermedades.</li>
-                       </ul>
-
-                       </p>
-                   </div>
-
-               </div>
-           </div>
-       </div>
-       -->
-
-<!--
-    <div id="contenedor">
-            <div id="contra" style="width:510px;height: 520px;">
-
-            </div>
-            <div style="background-color: purple;width:510px;height: 540px;display: inline-block;">
-
-            </div>
-    </div>
--->
-
-    <!--
-                    FOTOGRAMA 4
-    -->
-<!--
-            <div id="contenedor" style="background-color: white;">
-                <div class="cuadrado" style="background-color: #00FF7F;" id="imagenft4">
-
-                    <img src="img/fot4/fot4_ESTATICO.png" id="TallosFot4" />
-                    <img src="img/fot4/fot4_planta1.png" id="Planta1Fot4" />
-                    <img src="img/fot4/fot4_planta2.png" id="Planta2Fot4"/>
-
-                    <img src="img/fot4/fot4_planta3.png" id="Planta3AFot4"/>
-                    <img src="img/fot4/fot4_planta3.png" id="Planta3BFot4"/>
-
-
-                    <img src="img/fot4/fot4_planta4.png" id="Planta4AFot4"/>
-                </div>
-
-                <div class="cuadrado" style="background-color: cadetblue;">
-                    <div style="text-align: justify-all;">
-                        <div class="div" style="text-align: right;">
-                            <img src="img/fot4/sello3A.png" />
-                        </div>
-                        <p class="textoCudadrado">
-                            <span class="tituloCuadrado">
-                                COBERTURAS <br/>
-                                VIVAS SUPERFICIALES
-                            </span>
-                        </p>
-                        <p class="textoCudadrado">
-                            Las coberturas vivas superficiales son plantas que se asocian
-                            con cultivos con la finalidad de proteger los suelos de la
-                            erosión y recuperar su fertilidad. Funcionan como fuente
-                            proveedora de nutrientes y materia orgánica.
-                        </p>
-                        <p class="textoCudadrado">
-                        <span class="tituloCuadrado">
-                            VENTAJAS
-                        </span>
-                        <ul class="textoCudadrado">
-                            <li>Permite la recuperación productiva de los suelos degradados.</li>
-                            <li>Fijación de nitrógeno en el suelo.</li>
-                            <li>Incrementa la fertilidad del suelo y el contenido de materia orgánica.</li>
-                            <li>Mantiene la humedad del suelo en épocas de sequía.</li>
-                            <li>Mejora la textura del suelo.</li>
-                            <li>Reduce las pérdidas del suelo por causa de la erosión.</li>
-                            <li>Ayuda a controlar las malezas.</li>
-                        </ul>
-                        </p>
-                    </div>
-
-                </div>
-            </div>
-
--->
 <div class="grid-container">
+    <div style="background-color: #00FF7F;height: 190px; text-align: center;position: relative;">
+        <div style="height:150px;margin: 0;position: absolute;top: 50%;left: 50%;-ms-transform: translate(-50%, -50%);transform: translate(-50%, -50%);">
+            <img src="img/fot1/planta_intro.png" />
+            <h4 class="subtitulo">Once tecnologías para una</h4>
+            <h1 class="titulo">CAFICULTURA SOSTENIBLE</h1>
+        </div>
+    </div>
+    <div class="grid-sub-container" style="background-color: #eeeeee;height: 480px">
+        <div style="background-color: transparent;position: relative;width:510px;height: 470px;max-width: 100%;margin: 0 auto;">
+            <img src="img/fot1/fot1_ESTATICO.png" class="img-puestas" style="top:10%;left: 9%;" />
+            <img src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:42%;left: 60%;" />
+            <img src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:56.5%;left: 59.5%;" />
+        </div>
+        <div style="background-color: transparent;width:510px;height: 470px;">
+            <p class="textoCudadrado">
+                A través de esta infografía, queremos compartir nuestra propuesta tecnológica con base en <b>once prácticas para una caficultura con enfoque climático y sostenible.</b>
+            </p>
+            <p class="textoCudadrado">
+                Con ellas, los agricultores y agricultoras con los que hemos trabajado han logrado obtener beneficios como la disminución del daño ocasionado por las plagas y enfermedades, el ahorro por efecto de la disminución de la compra de insumos externos y una mayor producción de café de calidad.
+            </p>
+
+            <p class="textoCudadrado">
+                Hemos organizado estas prácticas en tres categorías según sus beneficios
+            </p>
+
+            <div style="background-color: transparent;">
+                <img src="img/estampas/sello3.png" height="121" width="139"/>
+                <img src="img/estampas/sello2.png" height="121" width="139"/>
+                <img src="img/estampas/sello1.png" height="121" width="139"/>
+            </div>
+        </div>
+    </div>
+    <div class="grid-sub-container" style="background-color: white;height: 440px">
+        <div style="background-color: transparent;position: relative;width:510px;height: 430px;max-width: 100%;margin: 0 auto;">
+            <img src="img/fot2/fot2_ESTATICO.png" class="img-puestas" style="top:10%;left: 8%;" />
+            <img src="img/fot2/fot2_plantaCRECER.png" class="img-puestas" style="top:61%;left: 17%;" />
+        </div>
+        <div style="background-color: transparent;width:510px;height: 430px;">
+            <p class="textoCudadrado">
+                Este aprendizaje se basa en la experiencia de Practical Action en 180 parcelas de pequeños productores no organizados en un entorno de ecosistemas frágiles de la selva alta de la región San Martín. Luego de la aplicación de estas prácticas, las y los productores vieron un aumento en sus ingresos mayor al 25% y percibieron un impacto positivo en su relación con el ecosistema local.
+            </p>
+            <p class="textoCudadrado">
+                ¿Qué podemos hacer si nos enfrentamos a una parcela cada vez menos productiva? ¿Cómo podemos encontrar un balance que beneficie también al medio ambiente?
+            </p>
+
+            <p>
+            <span class="tituloCuadrado">
+                ¡CONOZCAMOS ESTAS </br>
+                ONCE PRÁCTICAS SOSTENIBLES!
+            </span>
+            </p>
+        </div>
+    </div>
+    <div class="grid-sub-container" style="background-color: #eeeeee;height: 550px">
+        <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
+            <img src="img/fot3/fot3_ESTATICO.png" class="img-puestas" style="top:20%;left: 12%;z-index: 3;"/>
+            <img src="img/fot3/fot3_objeto1_ESTATICO.png" class="img-puestas" style="top:19%;left: 41%;"/>
+            <img src="img/fot3/fot3_objeto2_ESTATICO.png" class="img-puestas" style="top:71%;left: 6%;"/>
+            <img src="img/fot3/fot3_mujer1_mano2atras.png" class="img-puestas" style="top:34.9%;left: 35.2%;z-index: 2;"/>
+            <img src="img/fot3/fot3_mujer1_mano1.png" class="img-puestas" style="top:35%;left: 25.1%;z-index: 4;"/>
+        </div>
+        <div style="background-color: transparent;width:510px;height: 540px">
+            <div style="background-color: transparent;text-align: right;">
+                <img src="img/fot3/sello3A.png" height="132" width="157"/>
+            </div>
+
+            <p>
+            <span class="tituloCuadrado">
+                RENOVACIÓN DE CAFETALES <br/>
+                MEDIANTE SIEMBRAS NUEVAS
+            </span>
+            </p>
+            <p class="textoCudadrado">
+                Consiste en la reinstalación de plantaciones de café en áreas
+                que anteriormente fueron cafetales, pero que dejaron de serlo
+                debido a diversos factores, entre ellos, la baja productividad,
+                el ataque de plagas y enfermedades, u otros.
+            </p>
+            <p>
+            <span class="tituloCuadrado">
+                VENTAJAS
+            </span>
+            <ul class="textoCudadrado">
+                <li>Incremento de productividad.</li>
+                <li>Mejor diseño de la plantación e instalación de sombra</li>
+                <li>temporal y definitiva</li>
+                <li>Reducción de costos.</li>
+                <li>Facilita las labores culturales y la incorporación de prácticas de conservación de suelos.</li>
+                <li>Permite introducir variedades de alta calidad en taza y</li>
+                <li>resistentes a plagas y enfermedades.</li>
+            </ul>
+            </p>
+        </div>
+    </div>
     <div class="grid-sub-container" style="background-color: white;height: 550px">
-        <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;display: inline-block;">
+        <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot4/fot4_ESTATICO.png" id="TallosFot4" />
             <img src="img/fot4/fot4_planta1.png" id="Planta1Fot4" />
             <img src="img/fot4/fot4_planta2.png" id="Planta2Fot4"/>
@@ -269,7 +149,7 @@
         </div>
     </div>
     <div class="grid-sub-container" style="background-color:#eeeeee;height: 550px">
-        <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;display: inline-block;">
+        <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot5/fot5_ESTATICO.png" class="img-puestas" style="top:17%;left: 10%;" />
             <img src="img/fot5/fot5_arbol1.png" class="img-puestas" style="top:2.2%;left: 4.1%;" />
             <img src="img/fot5/fot5_cafe.png" class="img-puestas" style="top:59%;left: 58.8%;" />
@@ -322,12 +202,6 @@
 
 </main>
 
-<!--
-
--->
-
 <script src="js/main.js"></script>
-
-
 </body>
 </html>
