--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="grid-sub-container" style="background-color: #eeeeee;height: 480px">
         <div style="background-color: transparent;position: relative;width:510px;height: 470px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot1/fot1_ESTATICO.png" class="img-puestas" style="top:10%;left: 9%;" />
-            <img src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:42%;left: 60%;" />
+            <img src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:42%;left: 60%;" id="plantacrecer" />
             <img src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:56.5%;left: 59.5%;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 470px;">
