--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/estilo.css">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
 <main>
@@ -22,7 +23,7 @@
     </div>
     <!----- FOTOGRAMA 01 ----->
     <div class="grid-sub-container" style="background-color: #eeeeee;height: 480px">
-        <div style="background-color: transparent;position: relative;width:510px;height: 470px;max-width: 100%;margin: 0 auto;">
+        <div data-aos="flip-down" style="background-color: transparent;position: relative;width:510px;height: 470px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot1/fot1_ESTATICO.png" class="img-puestas" style="top:10%;left: 9%;" />
             <img src="img/fot1/fot1_plantaCRECER.png" class="img-puestas-50" style="top:42%;left: 60%;" id="plantacrecer" />
             <img src="img/fot1/fot1_plantaCRECER.png" class="img-puestas-100" style="top:56.5%;left: 59.5%;" />
@@ -50,7 +51,7 @@
     <div class="grid-sub-container" style="background-color: white;height: 440px">
         <div style="background-color: transparent;position: relative;width:510px;height: 430px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot2/fot2_ESTATICO.png" class="img-puestas" style="top:10%;left: 8%;" />
-            <img src="img/fot2/fot2_plantaCRECER.png" class="img-puestas" style="top:61%;left: 17%;" />
+            <img data-aos="flip-down" src="img/fot2/fot2_plantaCRECER.png" class="img-puestas" style="top:61%;left: 17%;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 430px;">
             <p class="textoCudadrado">
@@ -537,6 +538,10 @@
 </div>
 </main>
 
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script>
+    AOS.init();
+</script>
 <script src="js/main.js"></script>
 </body>
 </html>
