--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <!----- FOTOGRAMA 01 ----->
     <div class="grid-sub-container" style="background-color: #eeeeee;height: 480px">
-        <div data-aos="flip-down" style="background-color: transparent;position: relative;width:510px;height: 470px;max-width: 100%;margin: 0 auto;">
+        <div style="background-color: transparent;position: relative;width:510px;height: 470px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot1/fot1_ESTATICO.png" class="img-puestas" style="top:10%;left: 9%;" />
             <img data-aos="flip-down" src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:42%;left: 60%;" id="plantacrecer" />
             <img data-aos="flip-down" src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:56.5%;left: 59.5%;" />
@@ -51,7 +51,7 @@
     <div class="grid-sub-container" style="background-color: white;height: 440px">
         <div style="background-color: transparent;position: relative;width:510px;height: 430px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot2/fot2_ESTATICO.png" class="img-puestas" style="top:10%;left: 8%;" />
-            <img data-aos="flip-down" src="img/fot2/fot2_plantaCRECER.png" class="img-puestas" style="top:61%;left: 17%;" />
+            <img data-aos="fade-up" data-aos-duration="3000" src="img/fot2/fot2_plantaCRECER.png" class="img-puestas" style="top:61%;left: 17%;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 430px;">
             <p class="textoCudadrado">
