--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
-<main>
+<main id="mainconta" id="ltr">
 
 <div class="grid-container">
     <div style="background-color: #00FF7F;height: 190px; text-align: center;position: relative;">
@@ -22,7 +22,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 01 ----->
-    <div class="grid-sub-container" style="background-color: #eeeeee;height: 480px">
+    <div id="sec1" class="grid-sub-container" style="background-color: #eeeeee;height: 480px">
         <div style="background-color: transparent;position: relative;width:510px;height: 470px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot1/fot1_ESTATICO.png" class="img-puestas" style="top:10%;left: 9%;" />
             <img data-aos="flip-down" src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:42%;left: 60%;" id="plantacrecer" />
@@ -48,7 +48,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 02 ----->
-    <div class="grid-sub-container" style="background-color: white;height: 440px">
+    <div id="sec2" class="grid-sub-container" style="background-color: white;height: 440px">
         <div style="background-color: transparent;position: relative;width:510px;height: 430px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot2/fot2_ESTATICO.png" class="img-puestas" style="top:10%;left: 8%;" />
             <img data-aos="fade-up" data-aos-duration="3000" src="img/fot2/fot2_plantaCRECER.png" class="img-puestas" style="top:61%;left: 17%;" />
