--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 03 ----->
-    <div class="grid-sub-container" style="background-color: #eeeeee;height: 550px">
+    <div id="sec3" class="grid-sub-container" style="background-color: #eeeeee;height: 550px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot3/fot3_ESTATICO.png" class="img-puestas" style="top:20%;left: 12%;z-index: 3;"/>
             <img src="img/fot3/fot3_objeto1_ESTATICO.png" class="img-puestas" style="top:19%;left: 41%;"/>
@@ -112,7 +112,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 04 ----->
-    <div class="grid-sub-container" style="background-color: white;height: 550px">
+    <div id="sec4" class="grid-sub-container" style="background-color: white;height: 550px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot4/fot4_ESTATICO.png" id="TallosFot4" class="img-puestas" style="top:48%;left: 10%;" />
             <img src="img/fot4/fot4_planta1.png" id="Planta1Fot4" class="img-puestas" style="top:29.5%;left: 34%;z-index: 2;" />
